unpackaged/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Unique identifier for an account.</description>
    <displayFormat>{000000}</displayFormat>
    <inlineHelpText>Unique identifier for an account.</inlineHelpText>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>