unpackaged/main/default/objects/Account/fields/Accountreferral__c.field-meta.xml
<CustomField>
    <fullName>Accountreferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated referred accounts.</description>
    <label>Ambassador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ambassador Program</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>