unpackaged/main/default/objects/Account/fields/Area_of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Expertise__c</fullName>
    <label>Area of Expertise</label>
    <length>200</length>
    <type>Text</type>
</CustomField>