unpackaged/main/default/objects/Account/fields/Battery_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Battery_Pricing__c</fullName>
    <label>Battery Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>