unpackaged/main/default/objects/Account/fields/Build_Partner_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Partner Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>