unpackaged/main/default/objects/Account/fields/Build_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner_Status__c</fullName>
    <label>Build Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved not Active</fullName>
            </value>
            <value>
                <fullName>Ready for Orientation</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Do not Schedule</fullName>
            </value>
            <value>
                <fullName>Off Boarded</fullName>
            </value>
            <value>
                <fullName>Pending Background Check</fullName>
            </value>
            <value>
                <fullName>Docs Approved</fullName>
                <isActive>false</isActive>
                <label>Docs Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>