unpackaged/main/default/objects/Account/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <label>Builder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crescent</fullName>
            </value>
            <value>
                <fullName>Mungo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>