unpackaged/main/default/objects/Account/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <label>Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alaina Pianetti</fullName>
            </value>
            <value>
                <fullName>Alyssa Haley</fullName>
            </value>
            <value>
                <fullName>Andrew Catapano</fullName>
            </value>
            <value>
                <fullName>Anthony Silvestri</fullName>
            </value>
            <value>
                <fullName>Brady Anderson</fullName>
            </value>
            <value>
                <fullName>Dan DeVito</fullName>
            </value>
            <value>
                <fullName>Ethan Brown</fullName>
            </value>
            <value>
                <fullName>James Carter</fullName>
            </value>
            <value>
                <fullName>Joe Taylor</fullName>
            </value>
            <value>
                <fullName>Jonathan Van Putten</fullName>
            </value>
            <value>
                <fullName>Joseph Saunders</fullName>
            </value>
            <value>
                <fullName>Lee Mauldin</fullName>
            </value>
            <value>
                <fullName>McKenna Beam</fullName>
            </value>
            <value>
                <fullName>Ron Cates</fullName>
            </value>
            <value>
                <fullName>Sean Fahey</fullName>
            </value>
            <value>
                <fullName>Taylor Coppin</fullName>
            </value>
            <value>
                <fullName>Wes Jones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>