unpackaged/main/default/objects/Account/fields/Channel_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Status__c</fullName>
    <label>Channel Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>