unpackaged/main/default/objects/Account/fields/Commission_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Commission_Pricing__c</fullName>
    <label>Commission Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiered - Enterprise</fullName>
                <default>true</default>
                <label>Tiered - Enterprise</label>
            </value>
            <value>
                <fullName>Tiered - Alchemist</fullName>
            </value>
            <value>
                <fullName>Custom - Market</fullName>
            </value>
            <value>
                <fullName>Custom - Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>