unpackaged/main/default/objects/Account/fields/Commission_Tier__c.field-meta.xml
<CustomField>
    <fullName>Commission_Tier__c</fullName>
    <description>As of 6/1/2020
Tier 1 ( 1 - 9 )
Tier 2 ( 10 - 19 )
Tier 3 ( 20 + )
Silver ( 1 - 3 )
Gold ( 3 - 5 )
Diamond ( 6 - 10 )
Palmetto Circle ( 11 + )</description>
    <label>Commission Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
                <isActive>false</isActive>
                <label>Diamond</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Palmetto Circle</fullName>
                <isActive>false</isActive>
                <label>Palmetto Circle</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <isActive>false</isActive>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Tier 1</fullName>
                <isActive>false</isActive>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <isActive>false</isActive>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <isActive>false</isActive>
                <label>Tier 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>