unpackaged/main/default/objects/Account/fields/Compliance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Approval</label>
    <type>Checkbox</type>
</CustomField>