unpackaged/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>