unpackaged/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential - Customer</fullName>
            </value>
            <value>
                <fullName>Residential Channel Partner - Architects, Developers and Land Planners</fullName>
            </value>
            <value>
                <fullName>Residential Channel Partner - Brokerage Co.</fullName>
            </value>
            <value>
                <fullName>Residential Channel Partner - Contractor</fullName>
            </value>
            <value>
                <fullName>Residential Channel Partner - Homebuilder</fullName>
            </value>
            <value>
                <fullName>Residential Channel Partner - Property Manager</fullName>
            </value>
            <value>
                <fullName>Commercial Channel Partner - Architects, Developers and Land Planners</fullName>
            </value>
            <value>
                <fullName>Commercial Channel Partner - Contractor</fullName>
            </value>
            <value>
                <fullName>Commercial Channel Partner - Homebuilder</fullName>
            </value>
            <value>
                <fullName>Commercial Channel Partner - Property Manager</fullName>
            </value>
            <value>
                <fullName>Commercial - Customer</fullName>
            </value>
            <value>
                <fullName>Investor - Corporate Debt</fullName>
            </value>
            <value>
                <fullName>Investor - Corporate Equity</fullName>
            </value>
            <value>
                <fullName>Investor - Corporate Other</fullName>
            </value>
            <value>
                <fullName>Investor - Property Debt</fullName>
            </value>
            <value>
                <fullName>Investor - Property Equity</fullName>
            </value>
            <value>
                <fullName>Investor - Property Other</fullName>
            </value>
            <value>
                <fullName>Investor - Solar Array (entire system)</fullName>
            </value>
            <value>
                <fullName>Investor - Solar Debt</fullName>
            </value>
            <value>
                <fullName>Investor - Solar Sponsor Equity</fullName>
            </value>
            <value>
                <fullName>Investor - Solar Tax Equity</fullName>
            </value>
            <value>
                <fullName>Sunrun Installation</fullName>
            </value>
            <value>
                <fullName>Utility - Customer</fullName>
            </value>
            <value>
                <fullName>Business Development - REIT</fullName>
            </value>
            <value>
                <fullName>Residential Channel Partner - Build Only</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>