unpackaged/main/default/objects/Account/fields/Dealer_Fee_Price_Match_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Price_Match_Start_Date__c</fullName>
    <label>Dealer Fee Price Match Start Date</label>
    <type>Date</type>
</CustomField>