unpackaged/main/default/objects/Account/fields/Ele_Upgrade_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Ele_Upgrade_Pricing__c</fullName>
    <label>Ele Upgrade Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>