unpackaged/main/default/objects/Account/fields/Flat_Roof_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Flat_Roof_Pricing__c</fullName>
    <label>Flat Roof Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>