unpackaged/main/default/objects/Account/fields/Ground_Mount_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Ground_Mount_Pricing__c</fullName>
    <label>Ground Mount Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>