unpackaged/main/default/objects/Account/fields/How_did_you_hear_about_Palmetto__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Palmetto__c</fullName>
    <label>How did you hear about Palmetto?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance Partner</fullName>
            </value>
            <value>
                <fullName>Sales Organization</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>