unpackaged/main/default/objects/Account/fields/ICO_Fee__c.field-meta.xml
<CustomField>
    <fullName>ICO_Fee__c</fullName>
    <inlineHelpText>Installation Call Off</inlineHelpText>
    <label>ICO Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>