unpackaged/main/default/objects/Account/fields/Job_Capacity_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Job_Capacity_Per_Month__c</fullName>
    <label>Job Capacity Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>