unpackaged/main/default/objects/Account/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA</label>
    <type>Checkbox</type>
</CustomField>