unpackaged/main/default/objects/Account/fields/Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager__c</fullName>
    <label>Partner Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alaina Pianetti</fullName>
            </value>
            <value>
                <fullName>Anthony Silvestri</fullName>
            </value>
            <value>
                <fullName>Beau Howell</fullName>
            </value>
            <value>
                <fullName>Burke Spensky</fullName>
            </value>
            <value>
                <fullName>Courtney Klemcke</fullName>
            </value>
            <value>
                <fullName>Eric Knothe</fullName>
            </value>
            <value>
                <fullName>Eric Knothe CPR</fullName>
            </value>
            <value>
                <fullName>Hatham Al-Shabibi</fullName>
            </value>
            <value>
                <fullName>JayDee Ballew</fullName>
            </value>
            <value>
                <fullName>Ken Crabb</fullName>
            </value>
            <value>
                <fullName>Kevin DeSa</fullName>
            </value>
            <value>
                <fullName>Matt Collins</fullName>
            </value>
            <value>
                <fullName>Matt Collins - CPR</fullName>
            </value>
            <value>
                <fullName>McKenna Beam</fullName>
            </value>
            <value>
                <fullName>Michael Crispino</fullName>
            </value>
            <value>
                <fullName>Robert Hantges</fullName>
            </value>
            <value>
                <fullName>Robert Hantges CPR</fullName>
            </value>
            <value>
                <fullName>Sean Fahey</fullName>
            </value>
            <value>
                <fullName>Taylor Coppin</fullName>
            </value>
            <value>
                <fullName>Tyler Knode</fullName>
            </value>
            <value>
                <fullName>William Pringle</fullName>
            </value>
            <value>
                <fullName>William Pringle CPR</fullName>
            </value>
            <value>
                <fullName>Zack Hickerson</fullName>
            </value>
            <value>
                <fullName>Alyssa Haley</fullName>
                <isActive>false</isActive>
                <label>Alyssa Haley</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>