unpackaged/main/default/objects/Account/fields/Potential_Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Potential_Duplicate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Duplicate Account</label>
    <type>Checkbox</type>
</CustomField>