unpackaged/main/default/objects/Account/fields/Potential_for_Further_BD_Solar__c.field-meta.xml
<CustomField>
    <fullName>Potential_for_Further_BD_Solar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential for Further BD (Solar)</label>
    <type>Checkbox</type>
</CustomField>