unpackaged/main/default/objects/Account/fields/Power_of_1_Account__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1_Account__c</fullName>
    <formula>1</formula>
    <label>Power of 1 Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>