unpackaged/main/default/objects/Account/fields/Prior_Month_Cancellations__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Cancellations__c</fullName>
    <description>Total Number of Projects Cancelled in the Prior Month</description>
    <label>Prior Month Cancellations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>