unpackaged/main/default/objects/Account/fields/Prior_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Sales__c</fullName>
    <description>Total Number of Projects Contract Received in the Prior Month</description>
    <label>Prior Month Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>