unpackaged/main/default/objects/Account/fields/Projected_of_Deals_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Projected_of_Deals_Per_Month__c</fullName>
    <label>Sales Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>