unpackaged/main/default/objects/Account/fields/Rafter_Upgrade_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Rafter_Upgrade_Pricing__c</fullName>
    <label>Rafter Upgrade Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>