unpackaged/main/default/objects/Account/fields/Redline_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Redline_Pricing__c</fullName>
    <label>Redline Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>