unpackaged/main/default/objects/Account/fields/Referral_By_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_By_Code__c</fullName>
    <label>Referral By Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>