unpackaged/main/default/objects/Account/fields/Safety_Program__c.field-meta.xml
<CustomField>
    <fullName>Safety_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Program</label>
    <type>Checkbox</type>
</CustomField>