unpackaged/main/default/objects/Account/fields/Sales_Bonus_Program__c.field-meta.xml
<CustomField>
    <fullName>Sales_Bonus_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Bonus Program</label>
    <type>Checkbox</type>
</CustomField>