unpackaged/main/default/objects/Account/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <description>Mapped from Lead</description>
    <label>Scope of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Scope_of_Work</valueSetName>
    </valueSet>
</CustomField>