unpackaged/main/default/objects/Account/fields/SDM__c.field-meta.xml
<CustomField>
    <fullName>SDM__c</fullName>
    <label>SDM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joseph Saunders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>