unpackaged/main/default/objects/Account/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <label>SDR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tyler Knode</fullName>
            </value>
            <value>
                <fullName>Kevin DeSa</fullName>
            </value>
            <value>
                <fullName>Mac Crispino</fullName>
            </value>
            <value>
                <fullName>Alyssa Haley</fullName>
            </value>
            <value>
                <fullName>Beau Howell</fullName>
            </value>
            <value>
                <fullName>JayDee Ballew</fullName>
            </value>
            <value>
                <fullName>Courtney Klemcke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>